@@ -1,3 +1,9 @@
+2008-04-14  Frank Ch. Eigler  <fche@elastic.org>
+
+	* Makefile.am (stapio_*): Become able to link/compile against
+	bundled elfutils.
+	* Makefile.in: Regenerated.
+
 2008-04-09  Martin Hunt  <hunt@dragon>
 
 	* buildrun.cxx (run_pass): Remove unused "-d" option
